temp fix for misalign items in the up/down/grabs hover

--- a/src/sass/options/dubinfo.scss
+++ b/src/sass/options/dubinfo.scss
@@ -73,7 +73,7 @@
 }
 
 #dubinfo-preview li {
-    display: block;
+    display: flex;
     padding: 6px 10px;
     margin: 0;
     cursor: pointer;
